--- a/terminalUSB/terminalUSB/terminalUSB.csproj
+++ b/terminalUSB/terminalUSB/terminalUSB.csproj
@@ -13,4 +13,9 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <PackageReference Include="FontAwesome5" Version="2.1.6" />
+  </ItemGroup>
+
 </Project>
