розпочато роботу з COM

--- a/terminalUSB/terminalUSB/terminalUSB.csproj
+++ b/terminalUSB/terminalUSB/terminalUSB.csproj
@@ -10,12 +10,14 @@
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Services\" />
+    <Folder Include="ViewModels\Serial\" />
   </ItemGroup>
 
 
   <ItemGroup>
     <PackageReference Include="FontAwesome5" Version="2.1.6" />
     <PackageReference Include="OxyPlot.Wpf" Version="2.1.0" />
+    <PackageReference Include="System.IO.Ports" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
